<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".HostelDetail"
android:paddingLeft="6dp"
android:paddingRight="6dp"
android:paddingTop="3dp"
android:background="#BBBBBB">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="270dp"
        android:id="@+id/imgV_activity_hostel_detail"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name_activity_hostel_detail"
        android:layout_below="@id/imgV_activity_hostel_detail"
        android:paddingTop="5dp"
        android:layout_centerInParent="true"
        android:textStyle="bold|italic"
        android:textSize="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/tv_name_activity_hostel_detail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:id="@+id/tv_location_activity_hostel_detail"
        android:layout_below="@id/tv_name_activity_hostel_detail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:id="@+id/tv_type_activity_hostel_detail"
        android:layout_below="@id/tv_location_activity_hostel_detail"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/tv_type_activity_hostel_detail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_rooms_activity_hostel_detail"
        android:layout_below="@id/tv_type_activity_hostel_detail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:id="@+id/tv_tRooms_activity_hostel_detail"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:id="@+id/tv_aRooms_activity_hostel_detail"
            android:layout_weight="1"
            android:textAlignment="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/ll_rooms_activity_hostel_detail"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tbl_facilities_activity_hostel_detail"
        android:layout_below="@id/ll_rooms_activity_hostel_detail">

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sr_no_activity_hostel_detail"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/facility_activity_hostel_detail"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/availability_activity_hostel_detail"
                android:textStyle="bold"/>

        </TableRow>

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_activity_hostel_detail"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mess_activity_hostel_detail"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_mess_activity_hostel_detail"
                />

        </TableRow>

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two_activity_hostel_detail"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gas_activity_hostel_detail"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_gas_activity_hostel_detail"
                />

        </TableRow>

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/electricity_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_electricity_activity_hostel_detail"/>

        </TableRow>

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wifi_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_wifi_activity_hostel_detail"/>

        </TableRow>

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ac_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_ac_activity_hostel_detail"/>

        </TableRow>

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aBaths_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_aBaths_activity_hostel_detail"/>

        </TableRow>

        <TableRow android:padding="3dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ratings_activity_hostel_detail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_ratings_activity_hostel_detail"/>


        </TableRow>

        //Feedbacks  are not handled yet
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/tbl_facilities_activity_hostel_detail"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tbl_bed_activity_hostel_detail"
        android:layout_below="@id/tbl_facilities_activity_hostel_detail"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_request_reg_activity_hostel_detail"
        android:background="#000000"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:text="@string/txt_login"
        android:layout_below="@id/tbl_bed_activity_hostel_detail"/>

</RelativeLayout>
</ScrollView>