<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/txt_register"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="38dp"
            android:layout_marginTop="0dp">

        </TextView>
        <View
            android:layout_width="280dp"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="70dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/manager_signup_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_loginName"
            android:width="200dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary">
        </EditText>

        <EditText
            android:id="@+id/manager_signup_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_username"
            android:width="200dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary">
        </EditText>

        <EditText
            android:id="@+id/manager_signup_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:width="200dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimary">
        </EditText>

        <EditText
            android:id="@+id/manager_signup_cnic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_CNIC"
            android:textColor="@color/colorPrimary"
            android:inputType="number"
            android:width="200dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimary">
        </EditText>

        <EditText
            android:id="@+id/manager_signup_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_contact"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:width="200dp"
            android:textColorHint="@color/colorPrimary">
        </EditText>


        <EditText
            android:id="@+id/manager_signup_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email_signup"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:width="200dp"
            android:textColorHint="@color/colorPrimary">
        </EditText>

        <View
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"/>


        <Button

            android:id="@+id/btn_next_signup_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:textStyle="bold"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:text="@string/next" />

    </LinearLayout>


</ScrollView>