<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EditManagerProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/title_ll_tv_edit_manager_profile"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textSize="38dp"
            android:textStyle="bold">

        </TextView>

        <View
            android:layout_width="280dp"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="70dp"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/et_username_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/et_username"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"></EditText>


        <EditText
            android:id="@+id/et_CNIC_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="200dp"
            android:hint="@string/et_CNIC"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"></EditText>

        <EditText
            android:id="@+id/et_contact_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/et_contact"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"></EditText>

        <EditText
            android:id="@+id/et_new_password_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="200dp"
            android:hint="@string/et_new_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"></EditText>

        <EditText
            android:id="@+id/et_confirm_new_password_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="200dp"
            android:hint="@string/et_confirm_new_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"></EditText>

        <Button

            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:width="200dp"
            android:background="@color/black"
            android:text="@string/btn_save_edit_manager_profile"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>