<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HostelSeekerLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/txt_login"
            android:textSize="38sp"
            android:layout_marginTop="0dp">

        </TextView>

        <View
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="70dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_username_hostel_seeker_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_username"
            android:textColor="@color/colorPrimary"
            android:width="200dp"
            android:textColorHint="@color/colorPrimary"/>


        <EditText
            android:id="@+id/et_password_hostel_seeker_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/et_password"
            android:width="200dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimary">
        </EditText>


        <View
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"/>


        <Button
            android:id="@+id/btn_login_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:textSize="24sp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_signup_ll_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/btn_signup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-50dp"
            android:layout_marginTop="50dp"
            android:text="@string/txt_resetPassword"
            android:textColor="@color/black"
            android:id="@+id/tv_forgot_password_hostel_seeker_login">

        </TextView>


    </LinearLayout>

</ScrollView>